# capnet-assist

./: .travis.yml  90captive_portal_test  AUTHORS  CMakeLists.txt  INSTALL  README  README.md  io.elementary.capnet-assist.yml  meson.build  quickbuild.sh
.github/workflows/: ci.yml  main.yml  merge.yml  release.yml
data/: CMakeLists.txt  capnet-assist.metainfo.xml.in  example.html  io.elementary.capnet-assist.appdata.xml.in  io.elementary.capnet-assist.desktop  io.elementary.capnet-assist.desktop.in  io.elementary.capnet-assist.gschema.xml  meson.build  org.pantheon.capnet-assist.desktop  org.pantheon.capnet-assist.gschema.xml
debian/: changelog  control  copyright  install  postinst  prerm  rules
debian/patches/: official-204-url.patch  series
po/: POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  captive-login.pot  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+172 more)
po/extra/: POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+170 more)
src/: Application.vala  CMakeLists.txt  CaptiveLogin.vala  CertButton.vala  MainWindow.vala  Settings.vala  TabbedWebView.vala  config.vala  config.vala.cmake
vapi/: config.vapi  webkit2gtk-4.0.vapi
